# llama_wrapper

./: README.md  notes.md
profile/: README.md  pyproject.toml
profile/campaigns/: a100_full.yaml  switch_cost_demo.yaml
profile/profile_suite/: __init__.py  campaign.py  config.py  loader.py  orchestrator.py  results.py  validation.py
profile/profile_suite/harness/: __init__.py  client.py  logparse.py  repro.py  server.py  stats.py  sysprobe.py
profile/profile_suite/modules/: __init__.py  base.py  memory.py  performance.py  quality.py  switch_cost.py
profile/profile_suite/platform/: __init__.py  a100.py  base.py  jetson.py
profile/profile_suite/reporting/: __init__.py  report.py
profile/runs/a100-cuda_20260623T143556Z/: environment.json  manifest.json  (+1 more)
profile/tests/: __init__.py  conftest.py  test_batched_bench_parse.py  test_campaign_defaults.py  test_campaign_validation.py  test_config_change_type.py  test_decode_batch_validation.py  test_grid_expansion.py  test_integration_memory.py  test_integration_performance.py  test_integration_reproducibility.py  test_integration_switch_cost.py  test_isolation_ci_guard.py  test_isolation_invariant.py  test_logparse_example.py  test_memory_decompose.py  test_memory_feasibility.py  test_memory_reconcile.py  test_orchestrator_infeasible.py  test_orchestrator_wiring.py  test_performance_winner.py  test_quality_output.py  test_report_caption.py  test_report_platform_separation.py  test_report_rendering.py  test_repro_run_point.py  test_results_serialization.py  test_stats_aggregate.py  test_switch_cost_reconcile.py
(+33 files in other folders)
